--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,106 @@
+@import url('https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  font-family: 'Sen', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  overflow: hidden;
+  background-color: #F8F8F8;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+p{
+  margin-bottom: 0px;
+}
+
+h3{
+  margin: 0;
+  font-size: 1.1em;
+  color: white; 
+  font-weight: 600;
+}
+.button{
+  display: inline-block;
+  padding: 5px;
+  font-family: 'Sen', sans-serif;
+  font-size: small;
+  margin-right: 5px;
+}
+
+.edit-text {
+  /* min-height: 50px; */
+  border: 1px solid #aaa;
+  padding: 5px;
+  border-radius: 10px;
+}
+
+input{
+  width: 100%;
+  border: 1px solid #aaa;
+  padding: 5px;
+  border-radius: 3px;
+}
+
+.para{
+  width: 100%;
+  border: 1px solid #aaa;
+  padding: 5px;
+  border-radius: 3px;
+  min-height: 100px;
+}
+
+.inputs{
+  font-family: 'Sen', sans-serif;
+}
+
+/*---------Nav-----------*/
+
+.nav{
+  margin-top: 0;
+  width: 260px;
+  height: 100vh;
+  background-color: #2196F3;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+}
+
+.nav-header{
+  height: 190px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-links{
+  display: flex;
+  /* justify-content: center; */
+  padding-left: 40px;
+  align-items: center;
+  width: 100%;
+  /* height: 30px; */
+  /* padding: 15px; */
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.nav-links:hover {
+  background-color: #34A1F8;
+}
+
+
+/*---------Nav Close-----------*/
+
+
+/*---------Main Start-----------*/
+
+.main{
+  margin-left: 260px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 30px;
 }
