--- a/src/index.css
+++ b/src/index.css
@@ -104,3 +104,18 @@ input{
   padding-right: 50px;
   padding-top: 30px;
 }
+
+
+/*---------login---------*/
+
+.login{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 80vh;
+}
+Form{
+  background-color: rgb(171, 226, 226);
+  padding: 30px;
+}
