--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,10 @@ h3{
   font-size: 1.1em;
   color: white; 
   font-weight: 600;
+  
+}
+.menu_active{
+  background-color: #34A1F8;
 }
 .button{
   display: inline-block;
