--- a/src/index.css
+++ b/src/index.css
@@ -42,17 +42,63 @@ input{
   padding: 5px;
   border-radius: 3px;
 }
+.label{
+  margin-top: 20px;
+  margin-bottom: 0px;
+}
 
 .para{
-  width: 100%;
+
   border: 1px solid #aaa;
   padding: 5px;
   border-radius: 3px;
   min-height: 100px;
 }
 
+.edit-text{
+  border: 1px solid #aaa;
+  padding: 5px;
+  border-radius: 3px;
+  background-color: white;
+  width: 100%;
+  /* margin-top: 10px; */
+  margin-bottom: 15px;
+}
+
 .inputs{
   font-family: 'Sen', sans-serif;
+  background-color: white;
+  padding: 20px;
+}
+
+.edit{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+
+}
+.tap-text{
+  margin-top: 27px;
+  margin-left: 22px;
+  color: rgb(80, 80, 80);
+  font-size: 14px;
+}
+
+.back-button{
+  margin-bottom: 20px;
+  font-family: 'Sen', sans-serif;
+  padding: 7px;
+  font-size: 12px;
+  /* border-radius: 5px; */
+}
+
+.save-button{
+  margin-bottom: 20px;
+  margin-top: 10px;
+  font-family: 'Sen', sans-serif;
+  padding: 6px;
+  font-size: 16px;
+  background-color: rgb(163, 232, 235); 
 }
 
 /*---------Nav-----------*/
