--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+DataTable{
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content:center;
+}
